--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ body {
   height: 100vh;
   width: 100%;
 }
- 
+
+ /*Profile Card  */
 .card {
   height: 500px;
   width: 400px;
@@ -82,4 +83,31 @@ body {
   padding: 1em 2em;
   text-align: center;
   font-weight: 700;
+}
+
+/* Sign In Form */
+.form-signin {
+  width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+ 
+.form-signin .checkbox {
+  font-weight: 400;
+}
+ 
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+ 
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+ 
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
